# pybamm-twin-openems

./: README.md  deploy.backend.sh  deploy.edge.sh  deploy.sh  docker-compose.openems-backend.yml  docker-compose.openems-edge.yml  docker-compose.yml  modbus.Dockerfile  modbus_client.py  modbus_server_4.py  requirements.txt
.github/workflows/: ci.yml
openems-backend/config.d/Edge/: Websocket.config
openems-backend/config.d/Timedata/InfluxDB/: af9ff0cf-5f00-4c78-9c8d-54d8cd2ccee2.config
openems-edge/: MANIFEST.MF  mergeedge.sh
openems-edge/config.d/Core/: AppManager.config  ComponentManager.config  Cycle.config  Host.config  Meta.config  PredictorManager.config  Sum.config
openems-edge/config.d/Ess/: Power.config
openems-edge/config.d/Simulator/: App.config
openems-edge/openems-edge/: launcher.properties
openems-ui/: backend.Dockerfile  downloadEdgeUI.sh  edge.Dockerfile  nginx.conf
openems/config/felix/jay/: Readme.md
openems/meter/: meterSimulated_jay.java
pybamm/aman/: Lionpack.ipynb  Mutliple_cell.ipynb  Single_cell.ipynb
pybamm/amit/: plots1.py  plots2.py  plots3.py
pybamm/jay/: liion Pack.ipynb
pymodbus-fastapi-simulation/: entrypoint.sh  pymodbus.Dockerfile  pyproject.toml
pymodbus-fastapi-simulation/pymodbus_fastapi_simulation/: modbus_server.py
pymodbus/pybamm/: Modbus Server with Battery Simulation.py
pymodbus/pybamm/amit/: modbus-server-2.py  modbus-variation.py
pymodbus/random/: Modbus Server Random.py  modbus_server_4.py
pymodbus/random/amit/: modbus_client.py  modbus_server.py
(+36 files in other folders)
